# SFSUtils

./: .Rbuildignore  .coveragerc  .gitattributes  .gitignore  DESCRIPTION  Makefile  README.md  codecov.yml  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: pip-publish.yml  pip-test-publish.yml  run-tests.yml  upload-coverage.yml
R/: sfsutils.R
docs/: Makefile  coalesce_streams.py  conf.py  execute_r_notebook.py  index.rst  refs.bib  requirements.txt
docs/_static/: custom.css
docs/modules/: annotation.rst  changelog.rst  citing.rst  filtration.rst  io.rst  jointsfs.rst  parser.rst  settings.rst  sfs2.rst  spectra.rst  spectrum.rst  stratification.rst  two_sfs.rst
docs/reference/CLI/: usage.rst
docs/reference/Python/: annotations.ipynb  filtrations.ipynb  input_output.ipynb  installation.rst  joint.ipynb  parser.ipynb  quickstart.ipynb  spectra.ipynb  stratifications.ipynb  two_sfs.ipynb
docs/reference/R/: annotations.ipynb  filtrations.ipynb  init.R  input_output.ipynb  installation.rst  joint.ipynb  parser.ipynb  quickstart.ipynb  spectra.ipynb  stratifications.ipynb  two_sfs.ipynb
envs/: dev.yaml  r.yaml
man/: install_sfsutils.Rd  load_sfsutils.Rd  sfsutils_is_installed.Rd
recipe/: meta.yaml
resources/EST-SFS/: test-betula-biallelic-100000.txt
resources/msprime/: three_pop_joint.jsfs.json  three_pop_joint.pops.json  three_pop_joint.vcf  two_epoch.sfs.txt  two_epoch.trees  two_epoch.vcf  two_epoch_joint.jsfs.json  two_epoch_joint.pops.json  two_epoch_joint.vcf  two_sfs.meta.json  two_sfs.ref.json  two_sfs.sfs2.json  two_sfs.vcf
resources/msprime/two_epoch.vcz/: .zattrs  .zmetadata
resources/msprime/two_epoch.vcz/call_genotype/: .zarray
resources/msprime/two_epoch.vcz/call_genotype_mask/: .zarray
resources/msprime/two_epoch.vcz/call_genotype_phased/: .zarray  0.0
resources/msprime/two_epoch.vcz/region_index/: .zarray  0.0
resources/msprime/two_epoch.vcz/sample_id/: .zarray  0
resources/msprime/two_epoch.vcz/variant_allele/: .zarray  0.0
resources/msprime/two_epoch.vcz/variant_contig/: .zarray  0
resources/msprime/two_epoch.vcz/variant_filter/: .zarray
resources/msprime/two_epoch.vcz/variant_id/: .zarray  0
resources/msprime/two_epoch.vcz/variant_id_mask/: .zarray  0
resources/msprime/two_epoch.vcz/variant_length/: 0
resources/msprime/two_epoch.vcz/variant_position/: .zarray  0
resources/msprime/two_epoch.vcz/variant_quality/: .zarray  0
resources/msprime/typed_info.vcz/: .zattrs
sfsutils/: __init__.py  _parallelization.py  annotation.py  cli.py  filtration.py  io_handlers.py  json_handlers.py  parser.py  settings.py  spectrum.py  visualization.py
sfsutils.Rcheck/: 00install.out  sfsutils-Ex.R  sfsutils-Ex.Rout
sfsutils.Rcheck/00_pkg_src/sfsutils/: DESCRIPTION  NAMESPACE
sfsutils.Rcheck/sfsutils/: DESCRIPTION  INDEX
sfsutils.Rcheck/sfsutils/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
sfsutils.Rcheck/sfsutils/R/: sfsutils.rdb  sfsutils.rdx
sfsutils.Rcheck/sfsutils/help/: AnIndex  aliases.rds  paths.rds  sfsutils.rdb  sfsutils.rdx
sfsutils.Rcheck/sfsutils/html/: 00Index.html
sfsutils.Rcheck/tests/: testthat.Rout
snakemake/: Snakefile
snakemake/config/: config.yaml
snakemake/envs/: base.yaml  base_pypi.yaml  build.yaml  docs.yaml  est-sfs.yaml  gatk.yaml  requirements.txt  samtools.yaml  snpeff.yaml  tabix.yaml  vep.yaml  wget.yaml
snakemake/scripts/: annotate_degeneracy.py  annotate_polarization.py  annotate_synonymy.py  check_stratified_spectra.py  combine_spectra.py  determine_4fold_vs_0fold.py  example_annotator.py  example_filterer.py  example_maximum_likelihood_ancestral_annotation.py  example_parser_homo.py  example_parser_pendula.py  fold_sfs.py  merge_spectra.py  merge_spectra_hominidae.py  parse_polarize_vcf_betula.py  parse_vcf.py  parse_vcf_betula.py  parse_vcf_hgdp.py  plot_spectra.py  remove_info_tags_vcf.py
testing/: __init__.py  conftest.py  generate_msprime_fixtures.py  generate_two_sfs_demo.py  generate_vcz_fixtures.py  test_ancestral_synthetic.py  test_annotation.py  test_annotation_mocked.py  test_annotation_sources.py  test_cli.py  test_cli_examples.py  test_coverage_extra.py  test_degeneracy.py  test_extra_coverage.py  test_fast_parser.py  test_filtration.py  test_input_sources.py  test_io_handlers.py  test_msprime_validation.py  test_no_cyvcf2.py  test_parser.py  test_perf_annotation.py  test_perf_filtration.py  test_perf_io.py  test_perf_parser.py  test_release_scan_fixes.py  test_scan10_filtration.py  test_scan10_io.py  test_scan10_parser.py  test_scan10_spectrum.py  test_scan11_io.py  test_scan7_io.py  test_scan7_parser.py  test_scan8_filtration.py  test_scan8_io.py  test_scan8_misc.py  test_scan8_parser.py  test_scan9_annotation.py  test_scan9_filtration.py  test_scan9_io.py  (+12 more)
tests/: testthat.R
tests/testthat/: test_plot.R
(+33 files in other folders)
