[tool.poetry]
name = "sfsutils-popgen"
version = "1.0.0"
description = "SFS parsing with site filtration and annotation, from VCF, Zarr, or tree sequences"
authors = ["Janek Sendrowski <sendrowski.janek@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "sfsutils" }]

[tool.poetry.urls]
Homepage = "https://github.com/Sendrowski/SFSUtils"
Repository = "https://github.com/Sendrowski/SFSUtils"
Documentation = "https://sfsutils.readthedocs.io"
"Issue Tracker" = "https://github.com/Sendrowski/SFSUtils/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
matplotlib = ">=3.9,<4"
seaborn = ">=0.13.2,<1"
numpy = ">=1.24,<3"
pandas = ">=2.2.2,<3"
jsonpickle = ">=3,<4"
multiprocess = ">=0.70.12,<0.71"
tqdm = ">=4.60,<5"
biopython = ">=1.84,<2"
requests = ">=2.28"
scipy = ">=1.13,<2"

# Optional backends: cyvcf2 for VCF, zarr for VCF-Zarr stores, tskit for tree sequences (ARGs)
cyvcf2 = { version = ">=0.31,<1", optional = true }
zarr = { version = ">=3.1", optional = true }
tskit = { version = ">=0.5", optional = true }

[tool.poetry.scripts]
sfsutils = "sfsutils.cli:main"

[tool.poetry.extras]
vcf = ["cyvcf2"]
zarr = ["zarr"]
arg = ["tskit"]

[tool.poetry.group.dev.dependencies]
# >=9.1: caplog attaches its handler to the named 'sfsutils' logger (which sets propagate=False);
# earlier pytest only sees records that propagate to root, so the log-assertion tests fail there
pytest = "^9.1"
pytest-xdist = "^3.5"
urllib3 = "^2.5.0"
sphinx_book_theme = "~1.1.2"  # cap <1.2: 1.4.0 (pydata-sphinx-theme 0.20) breaks the mobile sidebar toggle
sphinx-autodoc-typehints = ">=2.1,<4"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.1.0"
sphinx = ">=7.3.7,<10"
pygments = "^2.15.1"
sphinxcontrib-bibtex = "^2.6.2"
autodocsumm = "^0.2.15"
cyvcf2 = ">=0.31,<1"
zarr = ">=3.1"
tskit = ">=0.5"
# coalescent simulation for the msprime-based validation fixtures and tests
msprime = ">=1.3"
# analytic two-locus SFS ground truth for the (slow) two-SFS validation test
phasegen = ">=1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
